test(user): add unit tests for address and preference services